--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
+
+
 <html lang="en" dir="ltr">
   <head>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
+
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p><a href ="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
+
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+    </div>
+
+    <div>
+      <p><a href ="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
+    </div>
+
+    <div>
+      <video width="404" height="720" controls>
+      <source src="./resources/video/excursion.mp4" type="video/mp4">
+      </video>"
+    </div>
+
+    <div>
+      <h1>Your personal travel guide</h1>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    </div>
+
+    <div>
+      <img src="./resources/images/tent_image.jpg">
+    </div>
+
+    <div>
+      <img src="./resources/images/phone_icon.jpg">
+    </div>
+
+    <div>
+      <h1>Coming soon for iPhone and Android</h1>
+    </div>
+
+    <div>
+      <p><a href ="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
+    </div>
+
+    <div>
+      <p>&copy; Excursion</p>
+    </div>
 
   </body>
 </html>
