touched up html now on to css

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </div>
 
     <div>
-      <video width="404" height="720" controls>
+      <video width="404" height="720" autoplay="autoplay">
       <source src="./resources/video/excursion.mp4" type="video/mp4">
       </video>"
     </div>
 
     <div>
-      <h1>Your personal travel guide</h1>
+      <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     </div>
 
@@ -34,11 +34,11 @@
     </div>
 
     <div>
-      <img src="./resources/images/phone_icon.jpg">
+      <img src="./resources/images/phone_icon.png">
     </div>
 
     <div>
-      <h1>Coming soon for iPhone and Android</h1>
+      <h2>Coming soon for iPhone and Android</h2>
     </div>
 
     <div>
