--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </div>
 
     <div>
-      <p><a href ="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
+      <p><a class="download" href ="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
     </div>
 
     <div>
-      <video width="404" height="720" autoplay="autoplay">
+      <video width="404" height="720" autoplay loop>
       <source src="./resources/video/excursion.mp4" type="video/mp4">
-      </video>"
+      </video>
     </div>
 
     <div>
@@ -33,19 +33,19 @@
       <img src="./resources/images/tent_image.jpg">
     </div>
 
-    <div>
+    <div class="phone">
       <img src="./resources/images/phone_icon.png">
     </div>
 
     <div>
-      <h2>Coming soon for iPhone and Android</h2>
+      <h2>Coming Soon for iPhone and Android</h2>
     </div>
 
     <div>
-      <p><a href ="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
+      <p><a class="download" href ="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a></p>
     </div>
 
-    <div>
+    <div class="footer">
       <p>&copy; Excursion</p>
     </div>
 
