--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div>
-      <video width="404" height="720" autoplay loop>
+      <video width="404" height="720" autoplay muted loop>
       <source src="./resources/video/excursion.mp4" type="video/mp4">
       </video>
     </div>
